Quiz model changed

--- a/templates/base/desktop_nav.html
+++ b/templates/base/desktop_nav.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="navbar-end">
-                <a href="/exercise-home.html" class="btn bg-blue-500 border-none font-manrope">Exercises</a>
+                <a href="{% url 'quiz:quiz_list' %}" class="btn bg-blue-500 border-none font-manrope">Exercises</a>
             </div>
         </div>
     </div>
