Search is working

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -14,6 +14,6 @@
             href="https://shahriarshafin.github.io/" target="_blank"
             rel="noopener noreferrer">SHAFIN</a> & <a
             class="text-blue-500 hover:text-blue-700"
-            href="https://shahriarshafin.github.io/" target="_blank"
+            href="https://sabbirhosen.github.io/" target="_blank"
             rel="noopener noreferrer">SABBIR</a></p>
 </footer>
