--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -94,22 +94,22 @@
                                         <div class="form-control mt-5">
 
                                             <label class="flex items-center cursor-pointer mb-3 rounded-md px-3 py-3">
-                                                <input type="radio" name="q_{{ question.question_id }}" value="A" class="mr-3 radio radio-primary" />
+                                                <input type="radio" name="q_{{ question.question_id }}" value="A" class="mr-3 radio radio-primary" required />
                                                 <span class="text-gray-500 text-base"> {{ question.option_A }}</span>
                                             </label>
 
                                             <label class="flex items-center cursor-pointer mb-3 rounded-md px-3 py-3">
-                                                <input type="radio" name="q_{{ question.question_id }}" value="B" class="mr-3 radio radio-primary" />
+                                                <input type="radio" name="q_{{ question.question_id }}" value="B" class="mr-3 radio radio-primary" required />
                                                 <span class="text-gray-500 text-base"> {{ question.option_B}}</span>
                                             </label>
 
                                             <label class="flex items-center cursor-pointer mb-3 rounded-md px-3 py-3">
-                                                <input type="radio" name="q_{{ question.question_id }}" value="C" class="mr-3 radio radio-primary" />
+                                                <input type="radio" name="q_{{ question.question_id }}" value="C" class="mr-3 radio radio-primary" required />
                                                 <span class="text-gray-500 text-base"> {{ question.option_C }}</span>
                                             </label>
 
                                             <label class="flex items-center cursor-pointer mb-3 rounded-md px-3 py-3">
-                                                <input type="radio" name="q_{{ question.question_id }}" value="D" class="mr-3 radio radio-primary" />
+                                                <input type="radio" name="q_{{ question.question_id }}" value="D" class="mr-3 radio radio-primary" required />
                                                 <span class="text-gray-500 text-base"> {{ question.option_D }}</span>
                                             </label>
 
