--- a/templates/base/desktop_nav.html
+++ b/templates/base/desktop_nav.html
@@ -1,5 +1,4 @@
 {% load static %}
-<!-- Top Navbar Start -->
 <div class="bg-white sticky top-0 z-50 border-b-2">
     <div class="container mx-auto navbar">
         <div class="flex-none block lg:hidden">
@@ -16,7 +15,7 @@
             <form action="{% url 'home:search' %}" method="get" id="search">
                 <div class="form-control">
                     <div class="input-group">
-                        <input type="text" placeholder="Search for articles" name="search_text"
+                        <input type="text" placeholder="Search for articles" name="search_text" value="{{ form_value }}"
                                class="input focus:outline-none focus:outline-offset-0 input-bordered focus:border-primary text-base w-96"/>
                         <button class="btn btn-square" type="submit" form="search" value="Submit">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
@@ -34,25 +33,19 @@
         </div>
     </div>
 </div>
-<!-- Top Navbar End -->
 
 <div class="flex text-gray-900 container mx-auto h-screen">
 
-    <!--Desktop Sidebar Start -->
     <aside class="flex-shrink-0 hidden w-64 border-r lg:block">
         <div class="flex flex-col h-full">
 
-            <!-- Sidebar Contents Start-->
             <nav aria-label="Main" class="flex-1 pt-7 px-2 space-y-2 overflow-y-hidden hover:overflow-y-auto">
-                <!-- dynamic Parent Start -->
                 <a href="{% url 'home:home' %}"
                    class="flex items-center px-2 py-2 rounded-lg text-gray-500 hover:bg-gray-200 hover:text-gray-700 selected">
                     <i class="fa-solid fa-newspaper"></i>
                     <span class="ml-3 text-sm font-medium"> Home </span>
                 </a>
-                <!-- dynamic Parent End -->
 
-                <!-- dynamic Parent with child Start -->
                 {% for nav_item in nav %}
                     <details class="group">
                         <summary
@@ -76,11 +69,9 @@
                         {% endfor %}
                     </details>
                 {% endfor %}
-                <!-- dynamic Parent with child End -->
                 <hr class="!my-5">
                 <p class="text-gray-500 font-medium text-sm">TRENDING TOPICS</p>
 
-                <!-- dynamic Tranding TOPICS Start -->
                 {% for trend in trending_topics %}
                     <a href="{% url 'post:post_list' trend.trend_id %}"
                        class="flex justify-between items-center px-2 py-2 rounded-lg text-gray-500 hover:bg-gray-200 hover:text-gray-700">
@@ -93,14 +84,8 @@
                         </div>
                     </a>
                 {% endfor %}
-                <!-- dynamic Tranding TOPICS End -->
 
             </nav>
-            <!-- Sidebar Contents End-->
 
-            <!-- Sidebar footer Start -->
-
-            <!-- Sidebar footer End -->
         </div>
     </aside>
-    <!--Desktop Sidebar End -->
